[package]
name = "try_or"
version = "0.2.0"
authors = ["Georg Echterling <georg@echterling.de>"]

description = "Contains helper macros for unwrapping Results and Options."
readme = "README.md"
license = "MIT"

documentation = "http://mixthos.github.com/try_or"
repository = "https://github.com/Mixthos/try_or"
